--- a/static/css/xs-styles.css
+++ b/static/css/xs-styles.css
@@ -9,3 +9,13 @@ Styles to be applied in xs-view port width
     /*min-height: 5px;*/
   }
 }
+
+/*
+=========================================
+Styles to be applied in xs-view port width
+=========================================*/
+@media only screen and (min-width: 500px) and (max-width: 768px){
+/*  .project-wrapper{
+    padding:0 50px;
+  }*/
+}
