--- a/static/css/main_v1_1.css
+++ b/static/css/main_v1_1.css
@@ -2,6 +2,10 @@
 ===========================
 Layout
 ===========================*/
-.no-padding{
+/*.no-padding{
   padding: 0;
+}*/
+
+.debug {
+  border: 2px red dashed;
 }
