got a nice looking hr break line in between the about and recent work sections

--- a/static/css/main_v1_1.css
+++ b/static/css/main_v1_1.css
@@ -6,6 +6,27 @@ Layout
   padding: 0;
 }*/
 
-.debug {
-  border: 2px red dashed;
+/*.hr-bg{
+  height: 3em;
 }
+
+.hr-sm{
+  height: 1.25em;
+}*/
+.hr-spacer{
+  height: 2em;
+}
+.hr-line{
+  border-bottom: 1px gray solid;
+}
+
+
+
+/*.debug {
+  border: 2px red dashed;
+}*/
+
+/*
+===========================
+Header - section
+===========================*/
