practicing using require.js to load jquery other js modules

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,18 +2,19 @@
 ===========================
 Layout
 ===========================*/
-.hr-spacer{
-  height: 2em;
-}
-.hr-line{
+.line{
   border-bottom: 1px gray solid;
 }
+.spacer {
+  min-height: 2em;
+}
 
 
 
-/*.debug {
+.debug {
   border: 2px red dashed;
-}*/
+  /*min-height: 10px;*/
+}
 
 /*
 ===========================
