--- a/static/css/home.css
+++ b/static/css/home.css
@@ -3,22 +3,44 @@
 div {
     border: 1px red dashed;
 }
+p {
+    background: black;
+    color: white;
+}
 /*################ General  ###############*/
 /*------- Background ------------*/
-body{
-    background: #bababa; 
+* { margin: 0; padding: 0; }
+
+html { 
+    background: url(../images/stackedWood_BW_edited.jpg) no-repeat center center fixed #bababa; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
-div.background {
-    width: 100%;
-    height: 100%;
-    background: url(../images/stackedWood_BW_edited.jpg) top center no-repeat;
-    opacity: 0.5;
-    z-index: -99;
+/*div.bg{
+    background: url(../images/stackedWood_BW_edited.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    min-width: 100%;
+    min-height: 100%;
+    /*opacity: 0.8;*/
+    /*z-index: -99;
     position: fixed;
-}
+}*/
 
 /*------- layout ------------*/
+/*.container{
+    border: 5px yellow dashed;
+    width: 100%;
+    height: 100%;
+    margin: 1em;
+    /*opacity: 0.5;*/
+    /*z-index: 2;*/
+/*}*/
 
 
 /*################ Media Queries ###############*/
