--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,8 +1,8 @@
 /*------- Debuggin ------------
 */
-div {
+/*div {
     border: 1px red dashed;
-}
+}*/
 p {
     background: black;
     color: white;
@@ -10,6 +10,10 @@ p {
 /*################ General  ###############*/
 /*------- Background ------------*/
 * { margin: 0; padding: 0; }
+
+div {
+     box-sizing: border-box;
+}
 
 html { 
     background: url(../images/stackedWood_BW_edited.jpg) no-repeat center center fixed #bababa; 
@@ -19,29 +23,41 @@ html {
     background-size: cover;
 }
 
-/*div.bg{
-    background: url(../images/stackedWood_BW_edited.jpg) no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    min-width: 100%;
-    min-height: 100%;
-    /*opacity: 0.8;*/
-    /*z-index: -99;
-    position: fixed;
-}*/
-
 /*------- layout ------------*/
-/*.container{
-    border: 5px yellow dashed;
-    width: 100%;
+html, body {
     height: 100%;
-    margin: 1em;
-    /*opacity: 0.5;*/
-    /*z-index: 2;*/
-/*}*/
+    margin: 0;
+}
 
+.container{
+    border: 5px yellow dashed;
+    /*padding: 1em;*/
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+/*vertical*/
+.top-row, .middle-row {
+    flex-grow: 1;
+}
+
+.middle-row {
+    flex-grow: 11;
+    display: flex;
+    flex-direction: row;
+}
+
+/*horizontal in middle-row*/
+.side-content, .main-content{
+    flex: 1;
+    border: 2px green dashed;
+}
+.main-content {
+    flex: 3;
+    /*display: none;*/
+}
 
 /*################ Media Queries ###############*/
 
