--- a/static/css/home.css
+++ b/static/css/home.css
@@ -76,38 +76,59 @@ html, body {
 .main-content{
     position: relative;
 }
-.text-wrapper, .button-wrapper {
+.txt-btn-container {
     position: absolute;
-    /*width: 90%;*/
-    left: 5%;
-    min-height: 3em;
+    top: 20%;
+    left: 10%;
+    width: 80%;
+    border: 2px pink dashed;
 }
+
 .text-wrapper {
     border: 1px green solid;
+    margin-bottom: 2em;
     /*background: black;
     color: white;*/
-    top: 30%;
 }
-.text-wrapper > * {
+/*.text-wrapper > * {
     background-color: black;
     color: white;
-}
-/*.button-wrapper {
-    top: 50%;
-    border: 1px red solid;
-    /*background: black;
-    color: white;*/
 }*/
-.button-wrapper > a {
+.text-wrapper > .header-wrapper {
+    color: white;
+    font: bold Helvetica, Sans-Serif; 
+    /*letter-spacing: 1px;  */
+}
+.header-wrapper > * {
+    display: inline-block;
+    background: rgb(0, 0, 0); /* fallback color */
+    background: rgba(0, 0, 0, 0.75);
+    padding: 10px; 
+}
+.header-wrapper > h1 {
+    font-size: 3em;
+}
+.header-wrapper > h3 {
+    font-size: 2em;
+}
+.button-wrapper {
+    border: 1px blue solid;
+    /*margin-top: 1em;*/
+}
+.btn-link {
     border: 2px solid white;
-    /*background: gray;*/
+    display: inline-block;
+    margin-bottom: 1em;
+    padding: 1em;
+    font-weight: 300;
     color: white;
     text-decoration: none !important;
-    padding: 1em;
 }
-.button-wrapper > a:hover {
+
+.btn-link:hover {
     border: 2px solid blue;
     color: white;
+    font-weight: 800;
 }
 
 /*################ Media Queries ###############*/
