basic aside bar and main content, looks decent

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -70,6 +70,26 @@ html, body {
     /*background-color: rgba(25, 123, 22, 0.75 );*/
     background: rgb(34, 84, 122); /* The Fallback */
     background-color: rgba(34, 84, 122, 0.9 );
+    position: relative;
+}
+
+.side-content-container {
+    position: absolute;
+    top: 10%;
+    width: 100%;
+    border: 1px black dashed;
+    min-width: 5em;
+    min-height: 10em;
+}
+.profile-pic-wrapper {
+    margin: 0 auto;
+    width: 80%;
+    border: 3px pink dashed;
+    text-align: center;
+}
+.profile-pic {
+    border-radius: 100%; 
+    width: 100%;
 }
 
 /*------- main-content ------------*/
