--- a/static/css/portfolio.css
+++ b/static/css/portfolio.css
@@ -4,3 +4,19 @@
     background-color: rgb(245,245,245);
     /*background-color: rgba(245,245,245,0.95)*/
 }
+
+.scroll-wrapper {
+    overflow-y: hidden;
+    height: 100%;
+    width: 100%;
+    border: 1px blue solid;
+    position: relative;
+}
+
+.scroll-content{
+    border: 1px blue solid;
+    width: 100%;
+    height: 100%;
+    /*overflow-y: hidden;*/
+    overflow-y: scroll;
+}
