--- a/static/css/home.css
+++ b/static/css/home.css
@@ -18,12 +18,29 @@ div {
      box-sizing: border-box;
 }
 
-html { 
-    background: url(../images/stackedWood_BW_edited.jpg) no-repeat center center fixed #bababa; 
+html {
+    background: url(../images/stackedWood_BW_edited.jpg) no-repeat center center fixed #bababa;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
+}
+
+.background {
+    width: 100%;
+    height: 100%;
+
+    -webkit-filter: blur(0px);
+    -moz-filter: blur(0px);
+    -o-filter: blur(0px);
+    -ms-filter: blur(0px);
+    filter: blur(0px);
 }
 
 /*------- layout ------------*/
@@ -31,6 +48,14 @@ html, body {
     height: 100%;
     margin: 0;
 }
+
+/*body {
+  -webkit-filter: blur(0px);
+  -moz-filter: blur(0px);
+  -o-filter: blur(0px);
+  -ms-filter: blur(0px);
+  filter: blur(0px);
+}*/
 .container{
     /*border: 5px yellow dashed;*/
     /*padding: 1em;*/
@@ -88,7 +113,7 @@ html, body {
     text-align: center;
 }
 .profile-pic {
-    border-radius: 100%; 
+    border-radius: 100%;
     width: 100%;
 }
 .side-header-wrapper{
@@ -110,7 +135,7 @@ html, body {
 
 /*------- main-content ------------*/
 .main-content{
-    position: relative;    
+    position: relative;
     /*background-color: rgb(245,245,245);*/
     /*background-color: rgba(0,0,0,0.20)*/
 }
@@ -134,14 +159,14 @@ html, body {
 }*/
 .text-wrapper > .header-wrapper {
     color: white;
-    font: bold Helvetica, Sans-Serif; 
+    font: bold Helvetica, Sans-Serif;
     /*letter-spacing: 1px;  */
 }
 .header-wrapper > * {
     display: inline-block;
     background: rgb(0, 0, 0); /* fallback color */
     background: rgba(0, 0, 0, 0.75);
-    padding: 10px; 
+    padding: 10px;
 }
 .header-wrapper > h1 {
     font-size: 3em;
