--- a/static/css/home.css
+++ b/static/css/home.css
@@ -18,29 +18,42 @@ div {
      box-sizing: border-box;
 }
 
-html {
+/*html {
     background: url(../images/stackedWood_BW_edited.jpg) no-repeat center center fixed #bababa;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+}*/
 
-    -webkit-filter: blur(5px);
-    -moz-filter: blur(5px);
-    -o-filter: blur(5px);
-    -ms-filter: blur(5px);
-    filter: blur(5px);
+html {
+    background: #bababa;
 }
 
-.background {
+div.bg-image {
+    background: url(../images/stackedWood_BW_edited.jpg) no-repeat center center fixed #bababa;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     width: 100%;
     height: 100%;
+    border: 5px solid brown;
+    -webkit-filter: blur(2px);
+    -moz-filter: blur(2px);
+    -o-filter: blur(2px);
+    -ms-filter: blur(2px);
+    filter: blur(2px);
+    z-index: -5;
+    position: absolute;
+}
 
-    -webkit-filter: blur(0px);
-    -moz-filter: blur(0px);
-    -o-filter: blur(0px);
-    -ms-filter: blur(0px);
-    filter: blur(0px);
+div.container {
+    width: 100%;
+    height: 100%;
+    border: 5px solid red;
+    z-index: 5;
+    position: absolute;
 }
 
 /*------- layout ------------*/
