--- a/static/css/home.css
+++ b/static/css/home.css
@@ -39,11 +39,11 @@ div.bg-image {
     width: 100%;
     height: 100%;
     border: 5px solid brown;
-    -webkit-filter: blur(2px);
+    /*-webkit-filter: blur(2px);
     -moz-filter: blur(2px);
     -o-filter: blur(2px);
     -ms-filter: blur(2px);
-    filter: blur(2px);
+    filter: blur(2px);*/
     z-index: -5;
     position: absolute;
 }
